2006-11-14 Applied patch by Ulf Larssen to fix a bug in
           apply_aspect. - EF

2006-11-14 Improved the ability of the colorbar to track
           changes in corresponding image, pcolor, or
           contourf. - EF

2006-11-11 Fixed bug that broke Numeric compatibility;
           added support for alpha to colorbar.  The
           alpha information is taken from the mappable
           object, not specified as a kwarg. - EF

2006-11-05 Added broken_barh function for makring a sequence of
           horizontal bars broken by gaps -- see examples/broken_barh.py

2006-11-05 Removed lineprops and markerprops from the Annotation code
           and replaced them with an arrow configurable with kwarg
           arrowprops.  See examples/annotation_demo.py - JDH

2006-11-02 Fixed a pylab subplot bug that was causing axes to be
           deleted with hspace or wspace equals zero in
           subplots_adjust - JDH

2006-10-31 Applied axes3d patch 1587359
           http://sourceforge.net/tracker/index.php?func=detail&aid=1587359&group_id=80706&atid=560722
           JDH

===============================================================
2006-10-26 Released 0.87.7 at revision 2835

2006-10-25 Made "tiny" kwarg in Locator.nonsingular much smaller - EF

2006-10-17 Closed sf bug 1562496 update line props dash/solid/cap/join
           styles - JDH

2006-10-17 Complete overhaul of the annotations API and example code -
           See matplotlib.text.Annotation and
           examples/annotation_demo.py JDH

2006-10-12 Committed Manuel Metz's StarPolygon code and
           examples/scatter_star_poly.py - JDH


2006-10-11 commented out all default values in matplotlibrc.template
           Default values should generally be taken from defaultParam in
           __init__.py - the file matplotlib should only contain those values
           that the user wants to explicitly change from the default.
           (see thread "marker color handling" on matplotlib-devel)
